HSDKv2: fix board model names
Signed-off-by: Eugeniy Paltsev <Eugeniy.Paltsev@synopsys.com>

--- a/arch/arc/dts/hsdk.dts
+++ b/arch/arc/dts/hsdk.dts
@@ -8,7 +8,7 @@
 #include "dt-bindings/clock/snps,hsdk-cgu.h"
 
 / {
-	model = "snps,hsdk";
+	model = "snps,hsdk-4xd";
 
 	#address-cells = <1>;
 	#size-cells = <1>;
