--- a/configs/hsdk_defconfig
+++ b/configs/hsdk_defconfig
@@ -11,7 +11,7 @@ CONFIG_BOOTARGS="console=ttyS0,115200n8"
 CONFIG_BOARD_EARLY_INIT_F=y
 CONFIG_BOARD_EARLY_INIT_R=y
 CONFIG_HUSH_PARSER=y
-CONFIG_SYS_PROMPT="hsdk# "
+CONFIG_SYS_PROMPT="hsdk-4xd# "
 CONFIG_CMD_ENV_FLAGS=y
 # CONFIG_CMD_FLASH is not set
 CONFIG_CMD_MMC=y
